added firebase and service
Service: For conducting short+long rest

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
               "devServerTarget": "dnd-helper:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
